syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy.caio";
option java_outer_classname = "KeyManager";

package br.com.zup.academy.caio;

service KeyManagerService {

  rpc registrarChave(CadastraChaveRequest) returns (CadastraChaveResponse) {}
}

enum TipoChave{
  CPF = 0;
  CELULAR = 1;
  EMAIL = 2;
  CHAVE_ALEATORIA = 3;
}

enum TipoConta{
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message CadastraChaveRequest{
  string codigoInterno = 1;
  TipoChave tipoChave = 2;
  string valor = 3;
  TipoConta tipoConta = 4;
}

message CadastraChaveResponse{
  string pixId = 1;
}

